WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214814
Repeatable WebContent crash: WebCore::jsWebGLRenderingContextPrototypeFunctionGetError
https://bugs.webkit.org/show_bug.cgi?id=214814
Summary
Repeatable WebContent crash: WebCore::jsWebGLRenderingContextPrototypeFunctio...
Dean Jackson
Reported
2020-07-26 14:36:35 PDT
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x7fff3f034d14 WebCore::jsWebGLRenderingContextPrototypeFunctionGetError(JSC::JSGlobalObject*, JSC::CallFrame*) + 260 (/AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/WebCore/WebCore-7609.1.15.2/./html/canvas/WebGLRenderingContextBase.cpp:2626) 1 ??? 0x00005cb51c401178 0 + 101932932796792 2 com.apple.JavaScriptCore 0x00007fff3332ba0d llint_entry + 93344 3 com.apple.JavaScriptCore 0x00007fff3332ba0d llint_entry + 93344
Attachments
Patch
(3.78 KB, patch)
2020-07-26 14:40 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2020-07-26 14:36:55 PDT
rdar://59290537
Dean Jackson
Comment 2
2020-07-26 14:40:56 PDT
Created
attachment 405258
[details]
Patch
EWS
Comment 3
2020-07-27 10:58:52 PDT
Committed
r264931
: <
https://trac.webkit.org/changeset/264931
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405258
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug