Repeatable WebContent crash: WebCore::jsWebGLRenderingContextPrototypeFunctionGetError https://bugs.webkit.org/show_bug.cgi?id=214814 rdar://59290537

Reviewed by Anders Carlsson.

Source/WebCore:

If a WebGL context was killed due to too many contexts
in the page, we would get a null pointer crash if
the page called getError() more than once on it.
This is an edge case not covered by the WebGL conformance
suite since the recyling behaviour is specific to our
implementation.

Test: fast/canvas/webgl/recycle-contexts.html

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::getError): Add a null check.

LayoutTests:

* fast/canvas/webgl/recycle-contexts-expected.html: Added.
* fast/canvas/webgl/recycle-contexts.html: Added.


Canonical link: https://commits.webkit.org/227647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264931 268f45cc-cd09-0410-ab3c-d52691b4dbfc